--- a/style.css
+++ b/style.css
@@ -117,3 +117,129 @@ body {
         margin-left: 20px;
     }
 }
+
+/* כרטיסיות טיולים הכי מומלצים*/
+
+.card {
+    border: 0;
+}
+
+.card_tours {
+    margin-bottom: 50px;
+    font-family: 'Sriracha', cursive;
+}
+
+.container .card {
+    position: relative;
+}
+
+.star {
+    margin-top: 5px;
+    color: rgb(199, 165, 121);
+}
+
+.container .card .face {
+    width: 100%;
+    height: 240px;
+    transition: 0.5s;
+    border: 0;
+}
+
+.container .card .face.face1 {
+    position: relative;
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(103px);
+}
+
+.container .card:hover .face.face1 {
+    transform: translateY(1px);
+}
+
+.container .card .face.face1 .content {
+    transition: 0.9s;
+}
+
+.container .card .face.face1 .content img {
+    max-width: 355px;
+    max-height: 360px;
+}
+
+
+.container .card .face.face1 .content h3 {
+    padding: 0;
+    color: #333;
+    text-align: center;
+    font-size: 1.5em;
+    padding-bottom: 30px;
+}
+
+.container .card .face.face2 {
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-135px);
+    display: inline-block;
+
+}
+
+.container .card:hover .face.face2 {
+    transform: translateY(0px);
+}
+
+.features-text h4 {
+    text-align: center;
+}
+
+.container .card .face.face2 .content p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.fa-map-marker,
+.span {
+    font-size: 2px;
+    margin-left: 2px;
+}
+
+.btn_book {
+    display: inline-block;
+    text-decoration: none;
+    color: #2d7e81;
+    background-color: #fff;
+    border: #2e8181 solid 1px;
+    padding: 5px;
+    margin-left: 270px;
+    margin-top: -80px;
+    font-family: 'Lilita One', cursive;
+
+}
+
+ .btn_book:hover {
+    top: 0;
+    border-radius: 0 0 60% 20%;
+    background: #47918d;
+    border: #47918d solid 1px;
+    color: #fff;
+    transition: 1.2s;
+}
+
+
+@media only screen and (max-width:900px) {
+    .container .card .face.face1 .content img {
+        width: 500px;
+        height: 100%;
+    }
+ 
+}
+
+
