--- a/style.css
+++ b/style.css
@@ -297,3 +297,104 @@ body {
     color: rgba(255, 255, 255, 0.85);
     box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
 }
+
+/* גלריה */
+.box_gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 100px;
+    font-family: 'Sriracha', cursive;
+}
+
+.card_gallery {
+    position: relative;
+    width: 350px;
+    height: 200px;
+    background: rgba(204, 199, 199, 0.452);
+    margin: 50px 0 0 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.card_gallery:before,
+.card_gallery:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.562);
+    transition: 0.5s;
+    z-index: -1;
+}
+
+.card_gallery:hover::before {
+    transform: rotate(20deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card_gallery:hover::after {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card_gallery .imgbx {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    background: #222;
+    transition: 0.5s;
+    z-index: 1;
+
+}
+
+.card_gallery:hover .imgbx {
+    bottom: 60px;
+}
+
+.card_gallery .imgbx img {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card_gallery .details {
+    position: absolute;
+    left: 10px;
+    bottom: 0px;
+    right: 10px;
+    height: 60px;
+    text-align: center;
+}
+
+.card_gallery .details h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 20px;
+    color: #777;
+    text-transform: uppercase;
+}
+
+.card_gallery .details h2 span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #777;
+    display: block;
+    margin-top: -5px;
+}
+
+@media only screen and (max-width:900px) {
+    .card_gallery {
+        margin-bottom: 40px;
+        margin-left: 0px;
+    }
+}
